# local-knowledge-bridge

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  lkb_setup.cmd
gateway/: README.md  deep_worker.py  lkb_ask.cmd  lkb_ask.ps1  lkb_ask.py  lkb_bootstrap_runtime.cmd  lkb_bootstrap_runtime.ps1  lkb_bootstrap_runtime.py  lkb_common.ps1  lkb_configure.cmd  lkb_configure.ps1  lkb_configure.py  lkb_doctor.cmd  lkb_doctor.ps1  lkb_doctor.py  lkb_eval.cmd  lkb_eval.ps1  lkb_eval.py  lkb_index.cmd  lkb_index.ps1  lkb_index.py  lkb_refresh.cmd  lkb_refresh.ps1  lkb_refresh.py  lkb_report.cmd  lkb_report.ps1  lkb_report.py  lkb_search.cmd  lkb_search.ps1  lkb_search.py  lkb_service.cmd  lkb_service.ps1  lkb_service.py  lkb_wizard.cmd  lkb_wizard.ps1  lkb_wizard.py  pyproject.toml  requirements.deep.txt  requirements.runtime.txt
gateway/eval/: cases.jsonl
gateway/src/local_knowledge_bridge/: __init__.py  bootstrap_runtime.py  chunking.py  cli_io.py  config.py  config_util.py  configure_cli.py  constants.py  db.py  deep_models.py  deep_ranking.py  doctor.py  document_text.py  endnote.py  evals.py  folder.py  normalize.py  obsidian.py  paths.py  pdf_text.py  ranking.py  reporting.py  retrieval.py  schema.py  (+9 more)
gateway/templates/: lkb_config.template.json
gateway/tests/: support.py  test_cli_io.py  test_cli_requests.py  test_deep_models.py  test_deep_ranking.py  test_deep_service.py  test_endnote_non_pdf_attachments.py  test_mode_contracts.py  test_runtime_repair.py  test_scoring.py  test_service_models.py  test_versioning.py  test_wizard.py  test_zotero_folder_sources.py
(+12 files in other folders)
